--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@ StuffedCroc
 Fleegle411
 Kai Mills (DarkRaider, km00700)
 EweLoHD
+Benjamin Plain (bplainia)
 
 See sounds/CREDITS for links to the audio sources and their licensing info
