--- a/AUTHORS
+++ b/AUTHORS
@@ -12,5 +12,6 @@ Fleegle411
 Kai Mills (DarkRaider, km00700)
 EweLoHD
 Benjamin Plain (bplainia)
+Jacob Hayes (tigerbird1)
 
 See sounds/CREDITS for links to the audio sources and their licensing info
