Code to allow for bell sound when key held down code for sustaining horn sound, rather than just playing the sound file

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,5 +9,6 @@ TartaricAcid
 gaojie429
 StuffedCroc
 Fleegle411
+Digital Magic (shadow4shadow)
 
 See sounds/CREDITS for links to the audio sources and their licensing info
