--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,6 @@ EweLoHD
 Benjamin Plain (bplainia)
 Jacob Hayes (tigerbird1)
 Mason Besmer (HealthCareUSA)
-
+Milan Damen (milandamen)
 
 See sounds/CREDITS for links to the audio sources and their licensing info
