--- a/AUTHORS
+++ b/AUTHORS
@@ -16,5 +16,6 @@ Benjamin Plain (bplainia)
 Jacob Hayes (tigerbird1)
 Mason Besmer (HealthCareUSA)
 Milan Damen (milandamen)
+Kuzmin V...w (Starter)
 
 See sounds/CREDITS for links to the audio sources and their licensing info
