--- a/src/main/resources/assets/eln2/lang/en_us.json
+++ b/src/main/resources/assets/eln2/lang/en_us.json
@@ -5,6 +5,8 @@
     "block.eln2.resistor": "Resistor",
     "block.eln2.wire": "Wire",
     "block.eln2.ground": "Ground",
+    "block.eln2.capacitor": "Capacitor",
+    "block.eln2.inductor": "Inductor",
 
     "plotter.circuit_explorer": "Circuit Explorer",
     "plotter.cell_count": "Cell Count",
