--- a/src/main/resources/assets/eln2/lang/en_us.json
+++ b/src/main/resources/assets/eln2/lang/en_us.json
@@ -7,6 +7,7 @@
     "block.eln2.ground": "Ground",
     "block.eln2.capacitor": "Capacitor",
     "block.eln2.inductor": "Inductor",
+    "block.eln2.diode": "Diode",
 
     "plotter.circuit_explorer": "Circuit Explorer",
     "plotter.cell_count": "Cell Count",
