Add voltage source GUI

--- a/src/main/resources/assets/eln2/lang/en_us.json
+++ b/src/main/resources/assets/eln2/lang/en_us.json
@@ -29,7 +29,6 @@
     "plotter.eln2.energy": "Energy",
     "plotter.eln2.power": "Power",
     "plotter.eln2.mode": "Mode",
-
     "waila.eln2.voltage": "Voltage",
     "waila.eln2.current": "Current",
     "waila.eln2.resistance": "Resistance",
@@ -37,5 +36,6 @@
     "waila.eln2.inductance": "Inductance",
     "waila.eln2.energy": "Energy",
     "waila.eln2.power": "Power",
-    "waila.eln2.mode": "Mode"
+    "waila.eln2.mode": "Mode",
+    "gui.eln2.save": "Save"
 }
