Warn about analytics on first join (#199)
* Warn about analytics on first join

* Add some error handling around IO operations

* Catch errors that may occur when making directories

* Remove magic number

* Newline

--- a/src/main/resources/assets/eln2/lang/en_us.json
+++ b/src/main/resources/assets/eln2/lang/en_us.json
@@ -39,5 +39,8 @@
     "waila.eln2.power": "Power",
     "waila.eln2.mode": "Mode",
 
-    "gui.eln2.save": "Save"
+    "gui.eln2.save": "Save",
+
+    "misc.eln2.acknowledge_analytics": "By default, Electrical Age 2 reports analytics to the mod author(s). If you wish to opt-out, please edit your config file. This message will not show again for 1 month.",
+    "misc.eln2.analytics_save_failure": "We were unable to save the analytics acknowledgement file. You will continue to be notified on each startup until the error is resolved. See your logs for more information"
 }
